服务管理接口
