# dto/service.go
@@ -7,8 +7,8 @@ import (
 
 type ServiceListInput struct {
 	Info     string `json:"info" form:"info" comment:"关键词" example:"" validate:""`                      // 关键词
-	PageNo   string `json:"page_no" form:"page_no" comment:"页数" example:"1" validate:"required"`        // 页数
-	PageSize string `json:"page_size" form:"page_size" comment:"每页条数" example:"20" validate:"required"` //每页条数
+	PageNo   int    `json:"page_no" form:"page_no" comment:"页数" example:"1" validate:"required"`        // 页数
+	PageSize int    `json:"page_size" form:"page_size" comment:"每页条数" example:"20" validate:"required"` //每页条数
 }
 
 func (param *ServiceListInput) BindValidParam(c *gin.Context) error {
@@ -27,6 +27,6 @@ type ServiceListItemOutput struct {
 
 }
 type ServiceListOutput struct {
-	Total string                  `json:"total" form:"total" comment:"总数" example:"" validate:""` //总数
+	Total int64                   `json:"total" form:"total" comment:"总数" example:"" validate:""` //总数
 	List  []ServiceListItemOutput `json:"list" form:"list" comment:"列表" example:"" validate:""`   //列表
 }
